# opencv

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  test.js  utils.cmake
.github/: build.js  check_build.js
.github/workflows/: build.yml  build_binaries.yml  npm_publish.yml  release.yml
lib/: index.d.ts  index.js
src/: Mat.cc  Mat.h  cvimpl.cc  cvimpl.h  exports.cc  utils.cc  utils.h
src/addon/: Mat.cc  cvimpl.cc  exports.cc  globals.cc  globals.h  utils.cc  utils.h
src/nodeml_opencv/: FunctionWorker.h  Mat.cc  Mat.h  cvimpl.cc  cvimpl.h  exports.cc  globals.cc  globals.h  utils.cc  utils.h
